# click-sources

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
click_sources/: inifile.py  source.py
click_sources/impl/: json_source.py
tests/resources/: valid-config.ini
tests/resources/ini/: bad-types.ini  with-section.ini  without-section.ini
tests/resources/json/: invalid-types.json  valid-config.json
tests/resources/toml/: valid-config.toml
tests/resources/yaml/: valid-config.yaml
tests/testsources/: base.py  test_inifile_source.py  test_json_source.py  test_toml_source.py  test_yaml_source.py  utils.py
