[tool.poetry]
name = "click_sources"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv2"
packages = [
  { include = "click_sources/"}
]
include = [
   "LICENSE",
   "README.md"
]

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
